<resources>
    <string name="app_name">You\'ve Got Mail</string>
    <string name="title_activity_scan_activity">Scan</string>
    <string name="title_activity_manual_activity">Manual Input</string>
    <string name="scan">Scan</string>
    <string name="manual_input">Manual Input</string>
    <string name="registered_boxes">Registered Boxes</string>
    <string name="registered_boxes_button">Registered Boxes</string>
    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">Name</string>
    <string name="scan_confirmation">Scan Successful</string>
    <string name="pobox_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">This is information about your P.O. Box.  Info—Info—Info
    </string>
    <string name="scan_image">Scan Image</string>
    <string name="envelope_button_text">Envelope</string>
    <string name="envelope_selected_confirmation">Envelope Selected</string>
    <string name="envelope_package_button_text"><![CDATA[Envelope & Package]]></string>
    <string name="envpkg_selected_confirmation"><![CDATA[Envelope & Package Selected]]></string>
    <string name="package_button_text">Package</string>
    <string name="package_selected_confirmation">Package Selected</string>
    <string name="mail_type">Mail Type</string>
    <string name="is_this_correct">Is this correct?</string>
    <string name="confirm_send"><![CDATA[Yes, Confirm & Send]]></string>
    <string name="box_number_text">PO BOX #</string>
    <string name="wrong_box_text">No, Wrong PO Box</string>
    <string name="wrong_po_box">Please Select the Right PO Box</string>
    <string name="wrong_mail_button">No, Wrong Mail Type</string>
    <string name="wrong_mail_type">Wrong Mail Type. Please Select Correctly</string>
    <string name="pobox_image">PObox_image</string>
    <string name="confirm_push">You\'ve Got Mail! Notification Sent!</string>
    <string name="type">type</string>
    <string name="mailbox_full_button_text">Mailbox Full</string>
    <string name="mailbox_full_push">Mailbox Full Notification Sent!</string>
    <string name="po_box_1001">1001</string>
    <string name="po_box_1002">1002</string>
    <string name="po_box_1003">1003</string>
    <string name="po_box_1004">1004</string>
    <string name="po_box_1005">1005</string>
    <string name="name_box_1001">Connor MacLeod</string>
    <string name="name_box_1002">Jean-Luc Picard</string>
    <string name="name_box_1003">Sarah Connor</string>
    <string name="name_box_1004">Johnny Five</string>
    <string name="name_box_1005">Theodore Logan</string>
    <string name="textview">custom_text</string>
    <string name="no_results_found">Sorry, no results were found.</string>
    <string name="scan_button">scan_button</string>
    <string name="envelope_button">envelope_button</string>
    <string name="package_button">package_button</string>
    <string name="env_and_pkg_button"><![CDATA[envelop & package button]]></string>
    <string name="mailbox_full_button">mailbox full button</string>
    <string name="notify_button">yes notify button</string>
    <string name="wrong_po_box_button">wrong pobox button</string>
    <string name="query_hint">Enter P.O. Box Number</string>

    <!-- Used to populate data array instead of list -->
    <string-array name="pobox_titles">
        <item>P.O. Box# 0001</item>
        <item>P.O. Box# 1001</item>
        <item>P.O. Box# 2001</item>
        <item>P.O. Box# 3001</item>
        <item>P.O. Box# 1002</item>
        <item>P.O. Box# 2002</item>
        <item>P.O. Box# 3002</item>
        <item>P.O. Box# 1003</item>
        <item>P.O. Box# 2003</item>
        <item>P.O. Box# 3003</item>
        <item>P.O. Box# 1004</item>
        <item>P.O. Box# 2004</item>
        <item>P.O. Box# 3004</item>
        <item>P.O. Box# 1005</item>
        <item>P.O. Box# 2005</item>
        <item>P.O. Box# 3005</item>
    </string-array>

    <string-array name="pobox_info">
        <item>Registered Boxes</item>
        <item>Connor MacLeod</item>
        <item>Lara Croft</item>
        <item>Optimus Prime</item>
        <item>Jean-Luc Picard</item>
        <item>Shana O\'Hara</item>
        <item>Hermione Granger</item>
        <item>Sarah Connor</item>
        <item>Han Solo</item>
        <item>Frodo Baggins</item>
        <item>Johnny Five</item>
        <item>Moana Waialiki</item>
        <item>Isaac Asimov</item>
        <item>Theodore Logan</item>
        <item>Tony Stark</item>
        <item>Ororo Munroe</item>
    </string-array>


    <array name="pobox_images">
        <item>@drawable/a0001</item>
        <item>@drawable/a1001</item>
        <item>@drawable/a2001</item>
        <item>@drawable/a3001</item>
        <item>@drawable/a1002</item>
        <item>@drawable/a2002</item>
        <item>@drawable/a3002</item>
        <item>@drawable/a1003</item>
        <item>@drawable/a2003</item>
        <item>@drawable/a3003</item>
        <item>@drawable/a1004</item>
        <item>@drawable/a2004</item>
        <item>@drawable/a3004</item>
        <item>@drawable/a1005</item>
        <item>@drawable/a2005</item>
        <item>@drawable/a3005</item>
    </array>

</resources>
