<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.youvegotmail.MailType">


    <TextView
        android:id="@+id/titleDetail"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:padding="16dp"
        android:text="@string/title_placeholder"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoDetail"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:padding="16dp"
        android:text="@string/news_placeholder"
        android:textColor="#00838F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/envelope_mail_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/envelope_mail_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="#00838F"
        android:onClick="launchEnvConfirmActivity"
        android:text="@string/envelope_button_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/package_mail_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#9E9D24"
        android:onClick="launchPkgConfirmActivity"
        android:text="@string/package_button_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/envelope_mail_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/envelope_mail_button"
        app:layout_constraintTop_toBottomOf="@+id/envelope_mail_button" />

    <Button
        android:id="@+id/both_mail_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="#FF8F00"
        android:onClick="launchEnvPkgConfirmActivity"
        android:text="@string/envelope_package_button_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/envelope_mail_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/envelope_mail_button"
        app:layout_constraintTop_toBottomOf="@+id/package_mail_button" />

    <Button
        android:id="@+id/mailbox_full_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="#EF6C00"
        android:onClick="launchMailboxFullActivity"
        android:text="@string/mailbox_full_button_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/both_mail_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/both_mail_button"
        app:layout_constraintTop_toBottomOf="@+id/both_mail_button" />


</androidx.constraintlayout.widget.ConstraintLayout>