<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendConfirm">

    <Button
        android:id="@+id/confirm_send_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="256dp"
        android:background="#C0CA33"
        android:text="@string/confirm_send"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/your_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_type"
        android:textColor="#FB8C00"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correct_button" />

    <Button
        android:id="@+id/correct_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00ACC1"
        android:text="@string/is_this_correct"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/confirm_send_button"
        app:layout_constraintEnd_toEndOf="@+id/confirm_send_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirm_send_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#F4511E"
        android:text="@string/wrong_mail_button"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirm_send_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirm_send_button"
        app:layout_constraintTop_toBottomOf="@+id/confirm_send_button"
        app:layout_constraintVertical_bias="0.134" />

</androidx.constraintlayout.widget.ConstraintLayout>