<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/poBoxImageDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/titleDetail"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/poBoxImageDetail"
            android:padding="16dp"
            android:text="@string/title_placeholder"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <TextView
            android:id="@+id/infoDetail"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/poBoxImageDetail"
            android:padding="16dp"
            android:text="@string/news_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/subTitleDetail"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoDetail"
            android:padding="16dp"
            android:text="@string/subtitle_detail_text" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_reset"
            android:tint="@android:color/white"
            android:onClick="resetpoBoxes"/>
    </RelativeLayout>
</ScrollView>